# ac215_NewsJuice

./: DATABASE_SETUP_GUIDE.md  Notes tutor meetings E215 NewsJuice.docx  README.md  database_explorer.py  docker-compose.yml  explore_database.py  news_feed_test.py  simple_db_viewer.py  sql_commands.md  test_connection.py
NewsJuice-Pipeline_MS_2/: .dockerignore  .gitignore  README.md  add_new_table.py  check_existing_tables.py  check_tables.py  conversation_helpers.py  docker-compose.yml  test_conversation_db.py
NewsJuice-Pipeline_MS_2/services/loader/: Dockerfile  loader.py
NewsJuice-Pipeline_MS_2/services/retriever/: Dockerfile  README.md
NewsJuice-Pipeline_MS_2/services/scraper/: Dockerfile  README - for independant run.md  README.md  crimson_scraper.py  gazette_scraper.py  pyproject.toml  scraper.py  scrapers.py
NewsJuice-Pipeline_MS_2_v2/: Makefile  README.md
artifacts/: news.jsonl
news-feed-proto/: Dockerfile  README.md  news_feed_test.py  pyproject.toml
news-feed-proto-v2/: Dockerfile2  README.md  main.py  main_long.py  main_wo_vec.py  pyproject.toml
news-feed-proto-v3/: Vector_DB_query.py  main.py  pyproject.toml
services/loader/: README.md  loader.py  pyproject.toml
services/loader/chunked_articles/: chunks-semantic-split-Brief bursts of wisdom.jsonl  chunks-semantic-split-In dogs, as in humans, a harsh past might bare its teeth.jsonl  chunks-semantic-split-Time for mandatory retirement ages for lawmakers, judges, presidents?.jsonl
services/retriever/: wait_for_db.py
services/summarizer/: pyproject.toml
(+3 files in other folders)
