[project]
name = "minimal-rag-ingest"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "feedparser>=6.0.10",
  "httpx>=0.27.0",
  "readability-lxml>=0.8.1",
  "lxml>=5.2.1",
  "psycopg[binary]>=3.2.1",
  "python-dateutil>=2.9.0",
  "langdetect>=1.0.9",
  "trafilatura>=1.9.0",
  "sentence-transformers>=5.1.1",
]
